--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-	<style>
-		.backlink{
-			color: #777;
-			text-decoration: none;
-		}
-		.backlink:hover{
-			color: #777;
-			text-decoration: underline;
-		}
-	</style>
+  <style>
+    .backlink{
+      color: #777;
+      text-decoration: none;
+    }
+    .backlink:hover{
+      color: #777;
+      text-decoration: underline;
+    }
+    .loading {
+      background: url(images/spinner.gif) no-repeat center center; 
+      height:200px;  
+      width: 600px;
+    }
+  </style>
   </head>
   <body>
     <div class="wrapper">
@@ -32,199 +37,8 @@
           <li><a href="https://github.com/Mostey/loadify">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
-        <h1>
-<a id="loadify" class="anchor" href="#loadify" aria-hidden="true"><span class="octicon octicon-link"></span></a>Loadify</h1>
-
-<p>Loadify is a Spotify downloader written in .NET for downloading playlists and tracks from Spotify.
-Please keep in mind that the software is currently a work-in-progress. Please let us know if something does not work as expected or if you find the documentation is lacking information.</p>
-
-<h2>
-<a id="problem" class="anchor" href="#problem" aria-hidden="true"><span class="octicon octicon-link"></span></a>Problem</h2>
-
-<p>Spotify offers a special mode, the offline mode. Using this offline mode, you are able to download tracks by storing it locally on your device for listening to music even if you don't have a connection to the internet.</p>
-
-<p>Well, why would you use a software to download tracks if you could simply do that by using the official client? In fact, you just could use the official client and use that offline mode mentioned before but it comes with a huge disadvantage: The only way to listen to downloaded tracks is to use the official Spotify client. Since Spotify encrypts their audio data, you won't be able to listen to the music you've downloaded once your Spotify premium membership has expired.</p>
-
-<h2>
-<a id="solution" class="anchor" href="#solution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Solution</h2>
-
-<p>There isn't much to say about Loadify. It is (yet another) Spotify downloader that is open source - useable for everyone. We have provided some features that we personally found important when it comes to downloading music. But, how does it work?</p>
-
-<p>Since audio files supplied by the client are encrypted, we needed to jump in a little bit earlier and thus used <strong>libspotify</strong>, the official Spotify library written in C (we actually use a C# wrapper that manages the transition from unmanaged to managed by marshalling). Since audio data is streamed into some type of callback once we told the API to load a certain track into the audio player, we just need to capture the data flying into this callback. The track is currently saved as <code>wave</code> file into the specified folder and then immediately gets converted to a <code>MP3</code> file.</p>
-
-<h2>
-<a id="contributions" class="anchor" href="#contributions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributions</h2>
-
-<p>Feel free to contribute by adding new features or translating Loadify into your native language.
-Don't know how to help with translating? No problem, we've set up a <a href="https://github.com/Mostey/loadify/wiki/Translations-and-Localization">wiki page</a><br>
-that should help you with getting started. Please create an issue if you've any questions.</p>
-
-<h2>
-<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
-
-<h3>
-<a id="user-friendly-simple-beautiful" class="anchor" href="#user-friendly-simple-beautiful" aria-hidden="true"><span class="octicon octicon-link"></span></a>User friendly, simple, beautiful</h3>
-
-<p>While this is not important for many other developers that did take hand on designing Spotify downloaders, it was very important for us to make using the software self-explainable and to keep things simple.</p>
-
-<hr>
-
-<h3>
-<a id="login-and-authentication" class="anchor" href="#login-and-authentication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Login and Authentication</h3>
-
-<p>The login is as simple as it gets. You just enter your username and password you'd normally use for logging into Spotify and click on <code>Login</code>. Please note that the <em>Remember me</em> option works fine but requires to store your password unencrypted into the configuration file. If you can't deal with that, please don't use this feature.</p>
-
-<p><img src="http://i.epvpimg.com/nwv4f.png" alt=""></p>
-
-<hr>
-
-<h3>
-<a id="dashboard" class="anchor" href="#dashboard" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dashboard</h3>
-
-<p>After logging in, a new window containing your dashboard will open up. The software will start to fetch your playlists and display them in the left pane.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/yQNWf.jpg" align="center" height="100%" width="700"></a></p>
-
-<p>The right pane is mainly used for configuration and settings. You may (currently) specify:</p>
-
-<ul>
-<li>where to store downloaded tracks</li>
-<li>where to store cache files for speeding up the login/playlist fetching process</li>
-</ul>
-
-<p>Once you've selected some tracks (or whole playlists) for downloading, the <code>Download</code> button will be enabled that triggers the download contract once it has been clicked.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/dRiYg.jpg" align="center" height="100%" width="700"></a></p>
-
-<hr>
-
-<h3>
-<a id="resizable-panes" class="anchor" href="#resizable-panes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resizable Panes</h3>
-
-<p>Playlist or track names are too long to be fully displayed? That isn't a problem anymore since you can easily use the slider to adjust the sizes of both panes.</p>
-
-<p>As you have might already found out, just grab the green bar with the dots on it and drag it to the left or right, depending on which panel you expect to be larger.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/ID1Yg.jpg" align="center" height="100%" width="700"></a></p>
-
-<hr>
-
-<h3>
-<a id="tracks-and-playlists" class="anchor" href="#tracks-and-playlists" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tracks and Playlists</h3>
-
-<p>Once you expand a playlist in the left pane, all associated tracks will be listed in the following format:</p>
-
-<p><code>&lt;Artists&gt; - &lt;Track name&gt;</code></p>
-
-<p>If you hover over the tracks, a tooltip will display the track duration.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/RWiqf.jpg" align="center" height="100%" width="250"></a></p>
-
-<p>Each time you select a track, the software calculates the approximate time that is needed for downloading all of the selected tracks. The estimated time is displayed below the playlist/track listings.</p>
-
-<p>You might have also noted the red crosses before each track listing. This is an indicator that signals if the track already exists on the local file system in the specified download directory.</p>
-
-<p>Once you have started the download contract, the download status bar in the lower left corner will become visible informing you about the current download status:</p>
-
-<ul>
-<li>The progress bar represents the status of the track being download.</li>
-<li>The drawing right from the progress bar contains the name of the track being downloaded</li>
-<li>(n/x) right from the drawing represents the status of the download contract. <strong>n</strong> being the current track index and <strong>x</strong> being the amount of tracks that the software was contracted with.</li>
-</ul>
-
-<p><a href="url"><img src="http://i.epvpimg.com/aQLme.jpg" align="center" height="100%" width="700"></a></p>
-
-<hr>
-
-<h3>
-<a id="local-track-detection" class="anchor" href="#local-track-detection" aria-hidden="true"><span class="octicon octicon-link"></span></a>Local Track detection</h3>
-
-<p>Once you've downloaded some tracks, you probably don't want to download them again on the next time you use Loadify. And since you won't have the time to check each file on your file system if you've already downloaded that particular track, Loadify will do this automatically for you.</p>
-
-<p>Tracks will be detected as existing if:</p>
-
-<ul>
-<li>the filename matches the output format of music files converted by Loadify, i.e. <code>&lt;Artists&gt; - Track name</code>, as mentioned above</li>
-<li>the format of the file is the format currently used by Loadify (mp3 is the only format at the moment and used by default)</li>
-<li>the file is located within the very own subdirectory of the playlist. If I have my download directory located under <code>D:\Download</code> and my associated playlist is called <code>DnB</code>, I would need to have the directory <code>D:\Download\DnB</code> where the music files are stored in. Don't worry, Loadify will also do this automatically.</li>
-</ul>
-
-<p>If a red cross is shown, the track does not exist (or simply wasn't found). If a green tick is shown, the track exists locally. If you, for example, select a whole playlist to download, the software will ask you whether you want to remove the existing tracks from your contract or not.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/OCJgf.jpg" align="center" height="100%" width="650"></a></p>
-
-<hr>
-
-<h3>
-<a id="searching-for-tracks" class="anchor" href="#searching-for-tracks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Searching for tracks</h3>
-
-<p>Sometimes you don't want to browse your playlists for a certain track you want to download. For quickly searching and finding tracks in your playlists, the search field was implemented:</p>
-
-<p>Typing in <strong>Eminem</strong> for example, will display all tracks that got the word <strong>Eminem</strong> in their name somehow. (case insensitive)</p>
-
-<p>Pressing enter will apply the search filter, removing the search text and pressing enter again will restore all playlists without the search filter.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/gETFe.jpg" align="center" height="100%" width="300"></a></p>
-
-<hr>
-
-<h3>
-<a id="adding-additional-playlists-and-tracks" class="anchor" href="#adding-additional-playlists-and-tracks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Adding additional playlists and tracks</h3>
-
-<p>If you want to download playlists/tracks that you've not added to your spotify account, you can temporarily or permanently add them in Loadify to select them for the download contract.</p>
-
-<h4>
-<a id="playlists" class="anchor" href="#playlists" aria-hidden="true"><span class="octicon octicon-link"></span></a>Playlists</h4>
-
-<p>Right click in an empty area of the panel where the playlists and tracks are shown and select <strong>Add Playlist</strong></p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/zOLIh.jpg" align="center" height="100%" width="350"></a></p>
-
-<p>A dialog will be displayed prompting you to enter the link to the playlist you want to add. There are 2 types of playlist links:</p>
-
-<ul>
-<li>HTTP links (example: <strong><a href="http://open.spotify.com/user/spotify_germany/playlist/0QUQf1xMMbtArIbDjwi2Hf">http://open.spotify.com/user/spotify_germany/playlist/0QUQf1xMMbtArIbDjwi2Hf</a></strong>)</li>
-<li>Spotify links (example: <strong>spotify:user:spotify_germany:playlist:0QUQf1xMMbtArIbDjwi2Hf</strong>)</li>
-</ul>
-
-<p>Note the <code>/playlist/</code> and <code>:playlist:</code> section of the url.
-If the url provided is a valid url to a playlist, Loadify will fetch all of it's tracks and add the new playlist in the left panel.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/8qh1g.jpg" align="center" height="100%" width="650"></a></p>
-
-<p>Straight after entering the url, Loadify will ask you if you want the playlist to be added permanently to your Spotify account. If you proceed by clicking <strong>yes</strong>, the playlist will be permanently added and should also show up in your Spotify client.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/yKqlh.jpg" align="center" height="100%" width="700"></a></p>
-
-<p>Once you refresh your playlists, it will be removed if you choose to not permanently add it to your account.</p>
-
-<h4>
-<a id="tracks" class="anchor" href="#tracks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tracks</h4>
-
-<p>For adding single tracks into an existing playlist, you need to right click one of the playlists and select <strong>Add Track</strong>.</p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/GAbHc.jpg" align="center" height="100%" width="350"></a></p>
-
-<p>This is basically following the same procedure as the <strong>Add Playlist</strong> feature explained earlier. The only difference lies in the urls.</p>
-
-<p>While playlist urls contain a <code>/playlist/</code> and <code>:playlist:</code> section, tracks do not. This section is replaced with the string <code>/track/</code> or <code>:track:</code>:</p>
-
-<ul>
-<li>HTTP links (example: <strong><a href="http://open.spotify.com/track/1B20QutZwNPRrlQ2tDKuOe">http://open.spotify.com/track/1B20QutZwNPRrlQ2tDKuOe</a></strong>)</li>
-<li>Spotify links (example: <strong>spotify:track:1B20QutZwNPRrlQ2tDKuOe</strong>)</li>
-</ul>
-
-<p><a href="url"><img src="http://i.epvpimg.com/469De.jpg" align="center" height="100%" width="650"></a></p>
-
-<hr>
-
-<h3>
-<a id="other-screenshots" class="anchor" href="#other-screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other screenshots</h3>
-
-<p><a href="url"><img src="http://i.epvpimg.com/nCQtd.jpg"></a></p>
-
-<p><a href="url"><img src="http://i.epvpimg.com/eIHUe.jpg" align="center" height="100%" width="600"></a></p>
+      <section id="dyncontent">
+        <div class="loading"></div>      
       </section>
       <footer>
         <p>This project is maintained by <a class="backlink" href="https://github.com/Mostey">Mostey</a></p>
@@ -232,6 +46,26 @@ If the url provided is a valid url to a playlist, Loadify will fetch all of it's
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-
+    <script src="javascripts/jquery-1.11.1.min.js"></script>
+    <script src="javascripts/Markdown.Converter.js"></script>
+    <script>
+        // Choose branch based on query string
+        var query = window.location.search;
+        if (query) {
+            var branch = query.replace("?", "");
+        } else {
+            var branch = "master";
+        }
+         
+        // Load readme content dynamically
+        $.ajax({
+            url: "https://rawgit.com/Mostey/loadify/" + branch + "/README.md",
+            dataType: 'text',
+            success: function(data) {
+                var converter = new Markdown.Converter();
+                $("#dyncontent").html(converter.makeHtml(data));
+            }
+        });
+    </script>
   </body>
 </html>
